syntax = "proto3";

package user.v1;

option go_package = "github.com/wundergraph/cosmo/router-plugin/examples/simple/user;userv1";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string id = 1;
}